# fcitx5-vinput

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_zh.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/vad/: LICENSE
i18n/: vinput-gui_zh_CN.ts
packaging/debian/: control  copyright  rules
packaging/fedora/: fcitx5-vinput.spec
po/: zh_CN.po
scripts/: check-i18n.py  mtranserver-proxy.py
server/: Dockerfile  QWEN_ASR_INTEGRATION.md  README.md  docker-compose.yml  hotwords.json  qwen_asr_server.py  test_server.py
src/addon/: vinput.cpp
src/cli/: cli_helpers.h  command_daemon.cpp  command_device.cpp  command_hotword.cpp  command_init.cpp  command_llm.cpp  command_llm.h  command_model.cpp  command_scene.cpp  command_scene.h  main.cpp
src/common/: core_config.cpp  core_config.h  model_manager.cpp  model_manager.h  model_repository.cpp  model_repository.h  postprocess_scene.cpp  postprocess_scene.h  string_utils.h
src/daemon/: CMakeLists.txt  asr_engine.cpp  asr_engine.h  audio_utils.cpp  audio_utils.h  main.cpp  post_processor.cpp  post_processor.h  qwen_asr_client.cpp  qwen_asr_client.h  vad_trimmer.cpp  vad_trimmer.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
